--- a/style.css
+++ b/style.css
@@ -25,32 +25,44 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
- align-items: center;
- gap: 1.5rem;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-.game-title{
-    font-size: 3rem;
+.game-title {
+  font-size: 3rem;
 }
 
-.game-btn{
-    padding: 20px;
-    font-weight: 600;
-    border: none;
-    border-radius: 10px;
-    background-color: #12BE2D;
-    color: white;
-    letter-spacing: 1px;
+.game-btn {
+  padding: 20px;
+  font-weight: 600;
+  border: none;
+  border-radius: 10px;
+  background-color: #12be2d;
+  color: white;
+  letter-spacing: 1px;
 }
 
-.game-btn:hover{
-    background-color: #2266BC;
+.game-btn:hover {
+  background-color: #2266bc;
 }
-.game-btn:active{
-    background-color: #1c56a1;
+.game-btn:active {
+  background-color: #1c56a1;
 }
 
-.game-winner{
-    font-weight: 900;
-    font-size: 2rem;
+.game-winner {
+  font-weight: 900;
+  font-size: 2rem;
+}
+
+.game-choices {
+  font-style: italic;
+}
+
+.game-round{
+  text-align: center;
+}
+
+.restart{
+  display: none;
 }
