--- a/style.css
+++ b/style.css
@@ -17,11 +17,19 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.game-section{
+  display: flex;
+gap: 2rem;
+height: 500px;
+}
+
 .game {
   background-color: white;
   padding: 3rem 5rem;
-  position: fixed;
   border-radius: 15px;
+  height: 500px;
+  width: 650px;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
@@ -57,6 +65,7 @@ body {
 
 .game-choices {
   font-style: italic;
+  text-align: center;
 }
 
 .game-round{
@@ -65,4 +74,39 @@ body {
 
 .restart{
   display: none;
+}
+
+.game-history{
+  background-color: white;
+  padding: 3rem;
+  text-align: center;
+  border-radius: 15px;
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+overflow-y: scroll;
+
+}
+
+.game-history::-webkit-scrollbar{
+  width: 10px;
+ border-radius: 2px;
+}
+.game-history::-webkit-scrollbar-thumb{
+  background-color: #2266bc;
+  width: 50px;
+  border-radius: 2px;
+}
+
+.game-history__score{
+  padding: 1rem 0;
+  display: flex;
+  width: 250px;
+  justify-content: space-between;
+}
+
+.score-title{
+  padding-bottom: 1rem;
+  
 }
